<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NaprawTo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="googlemapapikey">0A1jwXQDYaVs17PG_XNfLdiojHge4ykCdDnpkOw</string>
    <string name="Content"> </string>
    
    <!-- USER REJESTRACJA -->
	<string name="user_email">E-mail</string>
	<string name="user_password">Hasło</string>
	<string name="user_powtorz_password">Powtórz hasło</string>
	<string name="user_utworz_konto">Utwórz konto</string>
	<string name="user_label">Rejestracja</string>
	
    <!-- USER LOGOWANIE -->
       <string name="user_login_label">Logowanie</string>
       <string name="user_email_login">Podaj e-mail</string>
       <string name="user_password_login">Podaj hasło</string>
       <string name="user_login">Zaloguj</string>
       <string name="user_recorvery_password">Przypomnij hasło</string>
       <string name="user_dlugosc_hasla">min 7 - znaków</string>
       
    <!-- USER MENU GLOWNE -->
       <string name="main_menu_login">Zaloguj</string>
       <string name="main_menu_registration">Zarejestruj</string>
       <string name="main_menu_help">Pomoc</string>
       <string name="main_menu_aboutus">O nas</string>
       
    <!-- USER PANEL UZYTKOWNIKA -->    <!--NA CZUJA!!!-->
       <string name="user_panel_report_problem">Zgloś problem</string>
       <string name="user_panel_your_reports">Zgłoszone problemy</string>
       <string name="user_panel_all_problems">Wszystkie problemy</string>
       <string name="user_panel_account">Moje konto</string>
       
    <!-- MENU GLOWNE -->
       <string name="menu_main_report_problem">Zgłoś usterkę</string>
       <string name="menu_main_your_reports">Twoje zgłoszenia</string>
       <string name="menu_main_all_problems">Usterki w pobliżu</string>
       
    <!-- MAPA Z PUNKTAMI -->  
   	   <string name="mapa_centrum">Centrum</string>
       <string name="mapa_moja_lokalizacja">Moje lokalizacja</string>
       
       
</resources>
