<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:text="@string/user_login_label"
            android:textSize="25dp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                style="@style/user_textview"
                android:text="@string/user_email_login" />

            <EditText
                android:id="@+id/user_edit_email"
                style="@style/user_edittext"
                android:inputType="text" />
            
                <requestFocus />

            <TextView
                style="@style/user_textview"
                android:text="@string/user_password_login" />

            <EditText
                android:id="@+id/user_edit_haslo"
                style="@style/user_edittext"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/user_btn_uwtowrz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:text="@string/user_recorvery_password" 
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>