<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prezentacja"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <Button
        android:id="@+id/button1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/main_menu_help" 
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:text="@string/main_menu_aboutus" 
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/prezentacja_rejestracja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aboutus"
        android:layout_alignLeft="@+id/aboutus"
        android:layout_alignRight="@+id/aboutus"
        android:background="@drawable/button"
        android:text="@string/main_menu_registration"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="21sp" />

    <Button
        android:id="@+id/prezentacja_logowanie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prezentacja_rejestracja"
        android:layout_alignLeft="@+id/prezentacja_rejestracja"
        android:layout_alignRight="@+id/prezentacja_rejestracja"
        android:background="@drawable/button"
        android:text="@string/main_menu_login"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="21sp" />

</RelativeLayout>